Fix printing cutting off page

--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -1,3 +1,15 @@
+@media print {
+    html, body, home {
+        overflow: visible !important;
+        height: 100% !important;
+    }
+    #legal #legalText {
+        height: 100% !important;
+    }
+}
+
+
+
 home {
     position: absolute;
     top: 0;
